# meta_sim2024_ep_docker

./: README.md
ICRA2024-Sim2Real-RM/: Dockerfile  start.sh  t12_logger2.btlog  t12_sqlitelog.db3
ICRA2024-Sim2Real-RM/_internal/: libcrypto.so.1.1  libssl.so.1.1
ICRA2024-Sim2Real-RM/apriltag/: README.md  tag25h9.c
ICRA2024-Sim2Real-RM/apriltag/example/: opencv_demo.cc
ICRA2024-Sim2Real-RM/apriltag_ros/config/: settings.yaml  tags.yaml
ICRA2024-Sim2Real-RM/apriltag_ros/launch/: continuous_detection.launch
ICRA2024-Sim2Real-RM/apriltag_ros/src/: common_functions.cpp
ICRA2024-Sim2Real-RM/devel/: .rosinstall
ICRA2024-Sim2Real-RM/devel/include/rmus_solution/: graspsignal.h  (+8 more)
ICRA2024-Sim2Real-RM/scripts/: build.sh  kbd_new.sh  launch.sh  run.sh
ICRA2024-Sim2Real-RM/src/: CMakeLists.txt
ICRA2024-Sim2Real-RM/src/bt_frame/: CMakeLists.txt  package.xml
ICRA2024-Sim2Real-RM/src/carto_navigation/: CMakeLists.txt
ICRA2024-Sim2Real-RM/src/simple_planner/: CMakeLists.txt  package.xml
ICRA2024-Sim2Real-RM/src/simple_planner/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ICRA2024-Sim2Real-RM/src/simple_planner/catkin_generated/installspace/: simple_plannerConfig.cmake
ICRA2024-Sim2Real-RM/src/simple_planner/include/: utility.h
ICRA2024-Sim2Real-RM/src/simple_planner/include/cubic_spline/: cubic_spline_ros.h
ICRA2024-Sim2Real-RM/src/simple_planner/launch/: planner.launch
ICRA2024-Sim2Real-RM/src/simple_planner/src/: global_planner.cpp  local_planner.cpp
ICRA2024-Sim2Real-RM/src/simple_planner/srv/: change_point_num.srv
(+71 files in other folders)
